unpackaged/main/default/objects/metazoa_snapshot_temp__c/fields/metazoa_body_hash__c.field-meta.xml
<CustomField>
	<fullName>metazoa_body_hash__c</fullName>
	<label>Body Hash</label>
	<length>200</length>
	<type>Text</type>
</CustomField>