unpackaged/main/default/objects/metazoa_snapshot_temp__c/fields/metazoa_display_index__c.field-meta.xml
<CustomField>
	<fullName>metazoa_display_index__c</fullName>
	<label>Display Index</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>