unpackaged/main/default/objects/metazoa_snapshot_temp__c/fields/metazoa_extra_field_two__c.field-meta.xml
<CustomField>
	<fullName>metazoa_extra_field_two__c</fullName>
	<label>Extra Field Two</label>
	<length>200</length>
	<type>Text</type>
</CustomField>