unpackaged/main/default/objects/metazoa_snapshot_temp__c/fields/metazoa_job_fragment__c.field-meta.xml
<CustomField>
	<fullName>metazoa_job_fragment__c</fullName>
	<label>Job Fragment</label>
	<length>200</length>
	<type>Text</type>
</CustomField>