unpackaged/main/default/objects/metazoa_snapshot_temp__c/fields/metazoa_metadata_body__c.field-meta.xml
<CustomField>
	<fullName>metazoa_metadata_body__c</fullName>
	<label>Metadata Body</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>