unpackaged/main/default/objects/metazoa_snapshot_temp__c/fields/metazoa_overflow_one__c.field-meta.xml
<CustomField>
	<fullName>metazoa_overflow_one__c</fullName>
	<label>Overflow One</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>