unpackaged/main/default/objects/metazoa_snapshot_temp__c/fields/metazoa_overflow_two__c.field-meta.xml
<CustomField>
	<fullName>metazoa_overflow_two__c</fullName>
	<label>Overflow Two</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>