unpackaged/main/default/objects/metazoa_snapshot_temp__c/fields/metazoa_task_type__c.field-meta.xml
<CustomField>
	<fullName>metazoa_task_type__c</fullName>
	<label>Task Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Before Task</fullName>
			</value>
			<value>
				<fullName>After Task</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>